Prevent overlapping button blocks in the frontend (#30253)

--- a/packages/block-library/src/button/style.scss
+++ b/packages/block-library/src/button/style.scss
@@ -15,6 +15,7 @@ $blocks-block__margin: 0.5em;
 	text-align: center;
 	text-decoration: none;
 	overflow-wrap: break-word;
+	box-sizing: border-box;
 
 	&:hover,
 	&:focus,
